--- a/css/animations.css
+++ b/css/animations.css
@@ -12,27 +12,27 @@
     animation-fill-mode: both; 
 } 
 .slow{
-	 -webkit-animation-duration: 1.5s; 
+     -webkit-animation-duration: 1.5s; 
     animation-duration: 1.5s; 
     -webkit-animation-fill-mode: both; 
     animation-fill-mode: both; 
 }
 .slower{
-	 -webkit-animation-duration: 2s; 
+     -webkit-animation-duration: 2s; 
     animation-duration: 2s; 
     -webkit-animation-fill-mode: both; 
     animation-fill-mode: both; 
 }
 .slowest{
-	 -webkit-animation-duration: 3s; 
+     -webkit-animation-duration: 3s; 
     animation-duration: 3s; 
     -webkit-animation-fill-mode: both; 
     animation-fill-mode: both; 
 }
 
 .bounceInRight, .bounceInLeft, .bounceInUp, .bounceInDown{
-	opacity:0;
-	-webkit-transform: translateX(400px); 
+    opacity:0;
+    -webkit-transform: translateX(400px); 
     transform: translateX(400px); 
 }
 .fadeInRight, .fadeInLeft, .fadeInUp, .fadeInDown{
@@ -41,6 +41,15 @@
     transform: translateX(400px); 
 }
 
+.flipInX, .flipInY, .rotateIn, .rotateInUpLeft, .rotateInUpRight, .rotateInDownLeft, .rotateDownUpRight, .rollIn{
+    opacity:0;
+}
+
+.lightSpeedInRight. .lightSpeedInLeft{
+    opacity:0;
+    -webkit-transform: translateX(400px); 
+    transform: translateX(400px); 
+}
 
 /***********
 * bounceIn *
@@ -158,7 +167,7 @@
         -webkit-transform: translateX(-10px); 
     } 
     100% {
-     	opacity: 1;
+        opacity: 1;
          
         -webkit-transform: translateX(0); 
     } 
@@ -178,7 +187,7 @@
         transform: translateX(-10px); 
     } 
     100% {
-     	opacity: 1;
+        opacity: 1;
          
         transform: translateX(0); 
     } 
@@ -207,7 +216,7 @@
         -webkit-transform: translateY(10px); 
     } 
     100% {
-     	opacity: 1;
+        opacity: 1;
          
         -webkit-transform: translateY(0); 
     } 
@@ -227,7 +236,7 @@
         transform: translateY(10px); 
     } 
     100% {
-     	opacity: 1;
+        opacity: 1;
          
         transform: translateY(0); 
     } 
@@ -257,7 +266,7 @@
         -webkit-transform: translateY(-10px); 
     } 
     100% {
-     	opacity: 1;
+        opacity: 1;
          
         -webkit-transform: translateY(0); 
     } 
@@ -277,7 +286,7 @@
         transform: translateY(-10px); 
     } 
     100% {
-     	opacity: 1;
+        opacity: 1;
          
         transform: translateY(0); 
     } 
@@ -303,7 +312,7 @@
         display:block;} 
 }
 .fadeIn{
-	opacity:0;
+    opacity:0;
 }
 .fadeIn.go { 
     -webkit-animation-name: fadeIn; 
@@ -316,30 +325,30 @@
 
 @-webkit-keyframes growIn { 
     0% { 
-    	-webkit-transform: scale(0.2); 
-    	opacity:0;
+        -webkit-transform: scale(0.2); 
+        opacity:0;
     } 
     50% { 
-    	-webkit-transform: scale(1.2); 
-    	
+        -webkit-transform: scale(1.2); 
+        
     } 
     100% { 
-    	-webkit-transform: scale(1); 
-    	opacity:1;
+        -webkit-transform: scale(1); 
+        opacity:1;
     } 
 } 
 @keyframes growIn { 
     0% { 
-    	transform: scale(0.2); 
-    	opacity:0;
+        transform: scale(0.2); 
+        opacity:0;
     } 
     50% { 
-    	transform: scale(1.2); 
-    	
+        transform: scale(1.2); 
+        
     } 
     100% { 
-    	transform: scale(1); 
-    	opacity:1;
+        transform: scale(1); 
+        opacity:1;
     } 
 } 
 .growIn { 
@@ -349,7 +358,7 @@
     opacity:0;
 }
 .growIn.go{
-	-webkit-animation-name: growIn; 
+    -webkit-animation-name: growIn; 
     animation-name: growIn; 
 }
 
@@ -1012,4 +1021,569 @@
     -webkit-animation-name: flipInY; 
     backface-visibility: visible !important; 
     animation-name: flipInY; 
+}
+
+/*****************
+* Out animations *
+*****************/
+
+
+/************
+* bounceOut *
+*************/
+@-webkit-keyframes bounceOut { 
+    0% { 
+        -webkit-transform: scale(1); 
+    } 
+    25% { 
+        -webkit-transform: scale(.95); 
+    } 
+    50% { 
+        opacity: 1; 
+        -webkit-transform: scale(1.1); 
+    } 
+    100% { 
+        opacity: 0; 
+        -webkit-transform: scale(.3); 
+    } 
+} 
+@keyframes bounceOut { 
+    0% { 
+        transform: scale(1); 
+    } 
+    25% { 
+        transform: scale(.95); 
+    } 
+    50% { 
+        opacity: 1; 
+        transform: scale(1.1); 
+    } 
+    100% { 
+        opacity: 0; 
+        transform: scale(.3); 
+    } 
+} 
+.bounceOut.goAway { 
+    -webkit-animation-name: bounceOut; 
+    animation-name: bounceOut; 
+}
+
+/************
+* bounceOutUp *
+*************/
+@-webkit-keyframes bounceOutUp { 
+    0% { 
+        -webkit-transform: translateY(0); 
+    } 
+    20% { 
+        opacity: 1; 
+        -webkit-transform: translateY(20px); 
+    } 
+    100% { 
+        opacity: 0; 
+        -webkit-transform: translateY(-2000px); 
+    } 
+} 
+@keyframes bounceOutUp { 
+    0% { 
+        transform: translateY(0); 
+    } 
+    20% { 
+        opacity: 1; 
+        transform: translateY(20px); 
+    } 
+    100% { 
+        opacity: 0; 
+        transform: translateY(-2000px); 
+    } 
+} 
+.bounceOutUp.goAway { 
+    -webkit-animation-name: bounceOutUp; 
+    animation-name: bounceOutUp; 
+}
+
+/************
+* bounceOutDown *
+*************/
+@-webkit-keyframes bounceOutDown { 
+    0% { 
+        -webkit-transform: translateY(0); 
+    } 
+    20% { 
+        opacity: 1; 
+        -webkit-transform: translateY(-20px); 
+    } 
+    100% { 
+        opacity: 0; 
+        -webkit-transform: translateY(2000px); 
+    } 
+} 
+@keyframes bounceOutDown { 
+    0% { 
+        transform: translateY(0); 
+    } 
+    20% { 
+        opacity: 1; 
+        transform: translateY(-20px); 
+    } 
+    100% { 
+        opacity: 0; 
+        transform: translateY(2000px); 
+    } 
+} 
+.bounceOutDown.goAway { 
+    -webkit-animation-name: bounceOutDown; 
+    animation-name: bounceOutDown; 
+}
+
+
+/************
+* bounceOutLeft *
+*************/
+@-webkit-keyframes bounceOutLeft { 
+    0% { 
+        -webkit-transform: translateX(0); 
+    } 
+    20% { 
+        opacity: 1; 
+        -webkit-transform: translateX(20px); 
+    } 
+    100% { 
+        opacity: 0; 
+        -webkit-transform: translateX(-2000px); 
+    } 
+} 
+@keyframes bounceOutLeft { 
+    0% { 
+        transform: translateX(0); 
+    } 
+    20% { 
+        opacity: 1; 
+        transform: translateX(20px); 
+    } 
+    100% { 
+        opacity: 0; 
+        transform: translateX(-2000px); 
+    } 
+} 
+.bounceOutLeft.goAway { 
+    -webkit-animation-name: bounceOutLeft; 
+    animation-name: bounceOutLeft; 
+}
+
+/************
+* bounceOutRight *
+*************/
+@-webkit-keyframes bounceOutRight { 
+    0% { 
+        -webkit-transform: translateX(0); 
+    } 
+    20% { 
+        opacity: 1; 
+        -webkit-transform: translateX(-20px); 
+    } 
+    100% { 
+        opacity: 0; 
+        -webkit-transform: translateX(2000px); 
+    } 
+} 
+@keyframes bounceOutRight { 
+    0% { 
+        transform: translateX(0); 
+    } 
+    20% { 
+        opacity: 1; 
+        transform: translateX(-20px); 
+    } 
+    100% { 
+        opacity: 0; 
+        transform: translateX(2000px); 
+    } 
+} 
+.bounceOutRight.goAway { 
+    -webkit-animation-name: bounceOutRight; 
+    animation-name: bounceOutRight; 
+}
+
+/************
+* fadeOut *
+*************/
+@-webkit-keyframes fadeOut { 
+    0% {opacity: 1;} 
+    100% {opacity: 0;} 
+} 
+@keyframes fadeOut { 
+    0% {opacity: 1;} 
+    100% {opacity: 0;} 
+} 
+.fadeOut.goAway { 
+    -webkit-animation-name: fadeOut; 
+    animation-name: fadeOut; 
+}
+
+/************
+* fadeOutUp *
+*************/
+@-webkit-keyframes fadeOutUp { 
+    0% { 
+        opacity: 1; 
+        -webkit-transform: translateY(0); 
+    } 
+    100% { 
+        opacity: 0; 
+        -webkit-transform: translateY(-2000px); 
+    } 
+} 
+@keyframes fadeOutUp { 
+    0% { 
+        opacity: 1; 
+        transform: translateY(0); 
+    } 
+    100% { 
+        opacity: 0; 
+        transform: translateY(-2000px); 
+    } 
+} 
+.fadeOutUp.goAway { 
+    -webkit-animation-name: fadeOutUp; 
+    animation-name: fadeOutUp; 
+}
+
+/************
+* fadeOutDown *
+*************/
+@-webkit-keyframes fadeOutDown { 
+    0% { 
+        opacity: 1; 
+        -webkit-transform: translateY(0); 
+    } 
+    100% { 
+        opacity: 0; 
+        -webkit-transform: translateY(2000px); 
+    } 
+} 
+@keyframes fadeOutDown { 
+    0% { 
+        opacity: 1; 
+        transform: translateY(0); 
+    } 
+    100% { 
+        opacity: 0; 
+        transform: translateY(2000px); 
+    } 
+} 
+.fadeOutDown.goAway { 
+    -webkit-animation-name: fadeOutDown; 
+    animation-name: fadeOutDown; 
+}
+
+/************
+* fadeOutLeft *
+*************/
+@-webkit-keyframes fadeOutLeft { 
+    0% { 
+        opacity: 1; 
+        -webkit-transform: translateX(0); 
+    } 
+    100% { 
+        opacity: 0; 
+        -webkit-transform: translateX(-2000px); 
+    } 
+} 
+@keyframes fadeOutLeft { 
+    0% { 
+        opacity: 1; 
+        transform: translateX(0); 
+    } 
+    100% { 
+        opacity: 0; 
+        transform: translateX(-2000px); 
+    } 
+} 
+.fadeOutLeft.goAway { 
+    -webkit-animation-name: fadeOutLeft; 
+    animation-name: fadeOutLeft; 
+}
+
+/************
+* fadeOutRight *
+*************/
+@-webkit-keyframes fadeOutRight { 
+    0% { 
+        opacity: 1; 
+        -webkit-transform: translateX(0); 
+    } 
+    100% { 
+        opacity: 0; 
+        -webkit-transform: translateX(2000px); 
+    } 
+} 
+@keyframes fadeOutRight { 
+    0% { 
+        opacity: 1; 
+        transform: translateX(0); 
+    } 
+    100% { 
+        opacity: 0; 
+        transform: translateX(2000px); 
+    } 
+} 
+.fadeOutRight.goAway { 
+    -webkit-animation-name: fadeOutRight; 
+    animation-name: fadeOutRight; 
+}
+/************
+* flipOutX *
+*************/
+@-webkit-keyframes flipOutX { 
+    0% { 
+        -webkit-transform: perspective(400px) rotateX(0deg); 
+        opacity: 1; 
+    } 
+    100% { 
+        -webkit-transform: perspective(400px) rotateX(90deg); 
+        opacity: 0; 
+    } 
+} 
+@keyframes flipOutX { 
+    0% { 
+        transform: perspective(400px) rotateX(0deg); 
+        opacity: 1; 
+    } 
+    100% { 
+        transform: perspective(400px) rotateX(90deg); 
+        opacity: 0; 
+    } 
+} 
+.flipOutX.goAway { 
+    -webkit-animation-name: flipOutX; 
+    -webkit-backface-visibility: visible !important; 
+    animation-name: flipOutX; 
+    backface-visibility: visible !important; 
+}
+
+/************
+* flipOutY *
+*************/
+@-webkit-keyframes flipOutY { 
+    0% { 
+        -webkit-transform: perspective(400px) rotateY(0deg); 
+        opacity: 1; 
+    } 
+    100% { 
+        -webkit-transform: perspective(400px) rotateY(90deg); 
+        opacity: 0; 
+    } 
+} 
+@keyframes flipOutY { 
+    0% { 
+        transform: perspective(400px) rotateY(0deg); 
+        opacity: 1; 
+    } 
+    100% { 
+        transform: perspective(400px) rotateY(90deg); 
+        opacity: 0; 
+    } 
+} 
+.flipOutY { 
+    -webkit-backface-visibility: visible !important; 
+    -webkit-animation-name: flipOutY; 
+    backface-visibility: visible !important; 
+    animation-name: flipOutY; 
+}
+
+/************
+* lightSpeedOutRight *
+*************/
+@-webkit-keyframes lightSpeedOutRight { 
+    0% { -webkit-transform: translateX(0%) skewX(0deg); opacity: 1; } 
+    100% { -webkit-transform: translateX(100%) skewX(-30deg); opacity: 0; } 
+} 
+@keyframes lightSpeedOutRight { 
+    0% { transform: translateX(0%) skewX(0deg); opacity: 1; } 
+    100% { transform: translateX(100%) skewX(-30deg); opacity: 0; } 
+} 
+.lightSpeedOutRight.goAway { 
+    -webkit-animation-name: lightSpeedOutRight; 
+    animation-name: lightSpeedOutRight; 
+    -webkit-animation-timing-function: ease-in; 
+    animation-timing-function: ease-in; 
+} 
+
+
+/************
+* lightSpeedOutLeft *
+*************/
+@-webkit-keyframes lightSpeedOutLeft { 
+    0% { -webkit-transform: translateX(0%) skewX(0deg); opacity: 1; } 
+    100% { -webkit-transform: translateX(-100%) skewX(30deg); opacity: 0; } 
+} 
+@keyframes lightSpeedOutLeft { 
+    0% { transform: translateX(0%) skewX(0deg); opacity: 1; } 
+    100% { transform: translateX(-100%) skewX(30deg); opacity: 0; } 
+} 
+.lightSpeedOutLeft.goAway { 
+    -webkit-animation-name: lightSpeedOutLeft; 
+    animation-name: lightSpeedOutLeft; 
+    -webkit-animation-timing-function: ease-in; 
+    animation-timing-function: ease-in; 
+
+} 
+
+/************
+* rotateOut *
+*************/
+@-webkit-keyframes rotateOut { 
+    0% { 
+        -webkit-transform-origin: center center; 
+        -webkit-transform: rotate(0); 
+        opacity: 1; 
+    } 
+    100% { 
+        -webkit-transform-origin: center center; 
+        -webkit-transform: rotate(200deg); 
+        opacity: 0; 
+    } 
+} 
+@keyframes rotateOut { 
+    0% { 
+        transform-origin: center center; 
+        transform: rotate(0); 
+        opacity: 1; 
+    } 
+    100% { 
+        transform-origin: center center; 
+        transform: rotate(200deg); 
+        opacity: 0; 
+    } 
+} 
+.rotateOut.goAway { 
+    -webkit-animation-name: rotateOut; 
+    animation-name: rotateOut; 
+}
+
+
+/************
+* rotateOutUpLeft *
+*************/
+@-webkit-keyframes rotateOutUpLeft { 
+    0% { 
+        -webkit-transform-origin: left bottom; 
+        -webkit-transform: rotate(0); 
+        opacity: 1; 
+    } 
+    100% { 
+        -webkit-transform-origin: left bottom; 
+        -webkit-transform: rotate(-90deg); 
+        opacity: 0; 
+    } 
+} 
+@keyframes rotateOutUpLeft { 
+    0% { 
+        transform-origin: left bottom; 
+        transform: rotate(0); 
+        opacity: 1; 
+    } 
+    100% { 
+        -transform-origin: left bottom; 
+        -transform: rotate(-90deg); 
+        opacity: 0; 
+    } 
+} 
+.rotateOutUpLeft.goAway { 
+    -webkit-animation-name: rotateOutUpLeft; 
+    animation-name: rotateOutUpLeft; 
+}
+
+/************
+* rotateOutDownLeft *
+*************/
+
+@-webkit-keyframes rotateOutDownLeft { 
+    0% { 
+        -webkit-transform-origin: left bottom; 
+        -webkit-transform: rotate(0); 
+        opacity: 1; 
+    } 
+    100% { 
+        -webkit-transform-origin: left bottom; 
+        -webkit-transform: rotate(90deg); 
+        opacity: 0; 
+    } 
+} 
+@keyframes rotateOutDownLeft { 
+    0% { 
+        transform-origin: left bottom; 
+        transform: rotate(0); 
+        opacity: 1; 
+    } 
+    100% { 
+        transform-origin: left bottom; 
+        transform: rotate(90deg); 
+        opacity: 0; 
+    } 
+} 
+.rotateOutDownLeft.goAway { 
+    -webkit-animation-name: rotateOutDownLeft; 
+    animation-name: rotateOutDownLeft; 
+}
+/************
+* rotateOutUpRight *
+*************/
+
+@-webkit-keyframes rotateOutUpRight { 
+    0% { 
+        -webkit-transform-origin: right bottom; 
+        -webkit-transform: rotate(0); 
+        opacity: 1; 
+    } 
+    100% { 
+        -webkit-transform-origin: right bottom; 
+        -webkit-transform: rotate(90deg); 
+        opacity: 0; 
+    } 
+} 
+@keyframes rotateOutUpRight { 
+    0% { 
+        transform-origin: right bottom; 
+        transform: rotate(0); 
+        opacity: 1; 
+    } 
+    100% { 
+        transform-origin: right bottom; 
+        transform: rotate(90deg); 
+        opacity: 0; 
+    } 
+} 
+.rotateOutUpRight.goAway { 
+    -webkit-animation-name: rotateOutUpRight; 
+    animation-name: rotateOutUpRight; 
+}
+
+/************
+* rollOut *
+*************/
+@-webkit-keyframes rollOut { 
+    0% { 
+        opacity: 1; 
+        -webkit-transform: translateX(0px) rotate(0deg); 
+    } 
+    100% { 
+        opacity: 0; 
+        -webkit-transform: translateX(100%) rotate(120deg); 
+    } 
+} 
+@keyframes rollOut { 
+    0% { 
+        opacity: 1; 
+        transform: translateX(0px) rotate(0deg); 
+    } 
+    100% { 
+        opacity: 0; 
+        transform: translateX(100%) rotate(120deg); 
+    } 
+} 
+.rollOut.goAway { 
+    -webkit-animation-name: rollOut; 
+    animation-name: rollOut; 
 }
